# Beziers3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
src/: main.cpp
tools/: svg_to_bezier.py
